--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 								<h3>
 									<div c class="container-fluid" style="background-color:#630D86; max-width:1100px">
 										<div class="alert alert-primary">
-											<h1 style="color:white"><strong>Mojahidul Islam</strong></h1>
+											<h1 class="up" style="color:white"><strong>Mojahidul Islam</strong></h1>
 										</div>
 									</div>
 									I'm a Student of Computer Science Engineering studing in Asia Pacific University.<br>
@@ -184,24 +184,26 @@
 								<div class="">
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
-											<h3>phone</h3>
-											<p>+8801955384162</p>
+											<h3 style="color:black;"><b>Phone</b></h3>
+											<p style="color:black;"><B> +8801955384162</B></p>
 										</div>
 									</div>
 
 
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
-											<h3>email</h3>
-											<p>islamshaheb5@gamil.com</p>
+											<h3 style="color:black;"><b>email</b></h3>
+											<p  style="color:black;"><b>islamshaheb5@gamil.com</b></p>
 										</div>
 									</div>
 
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
-											<h3>website</h3>
-											<p>islamshaheb.github.io</p>
-										</div>
+											 <div class="col-sm4">
+												<h3 style="color:black;"><b>website</b></h3>
+												<ul><p style="color:blue;"><b>islamshaheb.github.io</b></p></ul>
+											</div>
+									</div>
 									</div>
 
 
@@ -209,21 +211,18 @@
 							</div>
 						</div>
 
-						<div class="col-sm-offset-1 col-sm-5">
-							<div class="single-about-img">
-								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
+					<div class="up">
+						<div class="col-sm-offset-1 col-sm-5" class="">
+							<div class="alert alert-primary">
+								<!--<div class="single-about-img">-->
+								<img src="assets/images/about/profile_image.jpg" alt="">
 								<div class="about-list-icon">
+									<!-- <div class="alert alert-primary" -->
 									<ul>
 										<li>
 											<a href="https://www.facebook.com/mujahidul.islam.589">
-												<i  class="fa fa-facebook" aria-hidden="false"></i>
+												<i  class="fa fa-facebook" aria-hidden="true"></i>
 											</a>
-										</li><!-- / li -->
-										<li>
-											<a href="#">
-												<i  class="fa fa-dribbble" aria-hidden="true"></i>
-											</a>
-
 										</li><!-- / li -->
 										<li>
 											<a href="#">
@@ -232,7 +231,7 @@
 
 										</li><!-- / li -->
 										<li>
-											<a href="https://www.linkedin.com/uas/login-submit">
+											<a href="https://www.linkedin.com/in/mojahidul-islam/">
 												<i  class="fa fa-linkedin" aria-hidden="true"></i>
 											</a>
 										</li><!-- / li -->
@@ -249,7 +248,8 @@
 							</div>
 
 					  	</div>
-					 </div>
+					  </div>
+					</div>
 			  	</div>
 		  	</div>
 		</section><!--/.about-->
@@ -760,25 +760,25 @@ believing it is stupid.
         </footer><!--/.footer-copyright-->
 		<!--footer-copyright end-->
 
+		<!-- Include all js compiled plugins (below), or include individual files as needed--> 
+				<!--footer-copyright end-->
+		
 		<!-- Include all js compiled plugins (below), or include individual files as needed -->
-		<script language=”JavaScript”>
-
-		</script>
 
 		<script src="assets/js/jquery.js"></script>
-
+        
         <!--modernizr.min.js-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-
+		
 		<!--bootstrap.min.js-->
         <script src="assets/js/bootstrap.min.js"></script>
-
+		
 		<!-- bootsnav js -->
 		<script src="assets/js/bootsnav.js"></script>
-
+		
 		<!-- jquery.sticky.js -->
 		<script src="assets/js/jquery.sticky.js"></script>
-
+		
 		<!-- for progress bar start-->
 
 		<!-- progressbar js -->
@@ -794,10 +794,10 @@ believing it is stupid.
 
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-
-
+		
+        
         <!--Custom JS-->
-        <script src="assets/js/contact.js"></script>
+        <script src="assets/js/custom.js"></script>
 		
 		</script>
 
