--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <!--font-family-->
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext" rel="stylesheet">
 
+		<!--social media icon from w3school-->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
         <!-- title of site -->
         <title>Mojahid</title>
 
@@ -166,16 +169,16 @@
 											<h1 class="up" style="color:white"><strong>Mojahidul Islam</strong></h1>
 										</div>
 									</div>
-									I'm a Student of Computer Science Engineering studing in Asia Pacific University.<br>
-								   <li><b>FATHER'S NAME: </b> SAYED</li>
-								   <li><b>MOTHER'S NAME: </b>FATEMA AKTER</li>
-								   <li><b>BORN: </b>28th AUGUST,1996</li>
-								   <li><b>HEIGHT: </b>176cm</li>
-								   <li><b>WEIGHT: </b>71kg</li>
-								   <li><b>PRESENT ADDRESS: </b>50/A EAST RAZABAZAR,TEJGOAN,DHAKA 1205</li>
-								   <li><b>PARMANANT ADDRESS: </b>BHOGPARA,KATIADI-2330,KISHOREGONJ</li>
-								   <li><b>BLOOD: </b>B(+)</li>
-								   <li><b>NATIONALITY: </b>BANGALADESHI</li>
+									I'm a student of Computer Science Engineering studying in Asia Pacific University.<br>
+								   <li style="color:black;"><b>FATHER'S NAME: </b> SAYED</li>
+								   <li style="color:black;"><b>MOTHER'S NAME: </b>FATEMA AKTER</li>
+								   <li style="color:black;"><b>BORN: </b>28th AUGUST,1996</li>
+								   <li style="color:black;"><b>HEIGHT: </b>176cm</li>
+								   <li style="color:black;"><b>WEIGHT: </b>71kg</li>
+								   <li style="color:black;"><b>PRESENT ADDRESS: </b>50/A EAST RAZABAZAR,TEJGOAN,DHAKA 1205</li>
+								   <li style="color:black;"><b>PARMANANT ADDRESS: </b>BHOGPARA,KATIADI-2330,KISHOREGONJ</li>
+								   <li style="color:black;"><b>BLOOD: </b>B(+)</li>
+								   <li style="color:black;"><b>NATIONALITY: </b>BANGALADESHI</li>
 
 
 								</h3>
@@ -211,43 +214,47 @@
 							</div>
 						</div>
 
-					<div class="up">
-						<div class="col-sm-offset-1 col-sm-5" class="">
-							<div class="alert alert-primary">
-								<!--<div class="single-about-img">-->
-								<img src="assets/images/about/profile_image.jpg" alt="">
-								<div class="about-list-icon">
+					    <div class="up">
+						    <div class="col-sm-offset-1 col-sm-5" class="">
+							
+								   <div class="single-about-img">
+								   <img src="assets/images/about/profile_image.jpg" alt="">
+								            <div class="about-list-icon">
 									<!-- <div class="alert alert-primary" -->
-									<ul>
-										<li>
-											<a href="https://www.facebook.com/mujahidul.islam.589">
-												<i  class="fa fa-facebook" aria-hidden="true"></i>
-											</a>
-										</li><!-- / li -->
-										<li>
-											<a href="#">
-												<i  class="fa fa-twitter" aria-hidden="true"></i>
-											</a>
+												<ul>
+													<li>
+														<a href="https://www.facebook.com/mujahidul.islam.589">
+															<i  class="fa fa-facebook" aria-hidden="true"></i>
+														</a>
+													</li><!-- / li -->
 
-										</li><!-- / li -->
-										<li>
-											<a href="https://www.linkedin.com/in/mojahidul-islam/">
-												<i  class="fa fa-linkedin" aria-hidden="true"></i>
-											</a>
-										</li><!-- / li -->
-										<li>
-											<a href="https://www.instagram.com/mujahidul_islam_00/">
-												<i  class="fa fa-instagram" aria-hidden="true"></i>
-											</a>
-										</li><!-- / li -->
+													<li>
+														<a href="#">
+															<i  class="fa fa-twitter" aria-hidden="true"></i>
+														</a>
+
+													</li><!-- / li -->
+
+													<li>
+														<a href="https://www.linkedin.com/in/mojahidul-islam/">
+															<i  class="fa fa-linkedin" aria-hidden="true"></i>
+														</a>
+													</li><!-- / li -->
+
+													<li>
+														<a href="https://www.instagram.com/mujahidul_islam_00/">
+															<i  class="fa fa-instagram" aria-hidden="true"></i>
+														</a>
+													</li><!-- / li -->
 
 
-									</ul><!-- / ul -->
-								</div><!-- /.about-list-icon -->
+												</ul><!-- / ul -->
+								<!--</div> /.about-list-icon -->
 
-							</div>
+							               </div>
+						           </div>
 
-					  	</div>
+					  	    </div>
 					  </div>
 					</div>
 			  	</div>
