--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 			                    <li class="smooth-menu"><a href="#portfolio">portfolio</a></li>
 			 
 			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
+			                    <li><a href="https://drive.google.com/file/d/1FiswIhnw_JTmQ8WHqOP5yfu4AHlJ5AZO/view?usp=sharing" ><b style="background-color:#FEF5E7;">Resume</b></a></li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
 			        </div><!--/.container-->
@@ -227,7 +228,7 @@
 								    <div class="row">
 									  <div class="resume">
 									 	<div class="header-text">
-											<a href="assets/download/mujahid resume.pdf" download style="color:black">&nbsp; &nbsp;&nbsp; &nbsp;download resume</a>
+											<a href="https://drive.google.com/file/d/1FiswIhnw_JTmQ8WHqOP5yfu4AHlJ5AZO/view?usp=sharing"  style="color:black"><b style="margin-left: 14px;">Resume</b></a>
 									     </div>
 									</div>
 								 </div>
