--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html class="no-js" lang="en">
 
     <head>
+    	<!-- <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href="assets/css/styles.css">
+ -->
             <!-- meta data -fdfdfdfdfdfdfdd->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -157,7 +162,7 @@
 
 					  	  <div class="column left"  style="background-image: url('assets/img/5.jpg');">
 						     <div class="home__data">
-				                   <h1 class="munna">Hi,<br>I'am <span class="home__title-color">Mojahid</span><br> <h2 style="color:">Learner ||  Programmer ||  Problem Solver || and<br>Database Administrator</h2></h1><br>
+				                   <h1 class="munna">Hi,<br>I'am <span class="home__title-color">Mojahid</span><br> <h2 style="color:">Learner ||  Programmer || and<br>Database Administrator</h2></h1><br>
 
 				                    <a href="https://drive.google.com/file/d/1FiswIhnw_JTmQ8WHqOP5yfu4AHlJ5AZO/view?usp=sharing" class="button">Resume</a>
 			                </div>
@@ -270,7 +275,7 @@
 
 
 
-			<section class="work section" id="portfolio">
+			<section class="work section" id="education">
                 <div class="section-heading text-center">
 					<h2> ACADEMIC DETAILS</h2>
 				</div>
@@ -367,8 +372,8 @@
 								</tr>
 							</table>
               
-		</section><!--/.education-->
-		<!--education end --> -->
+		</section>/.education-->
+		<!--education end -->
 
 		<!--skills start -->
 		<section id="skills" class="skills education"   >
@@ -813,6 +818,9 @@
                     </div>
                     <div class="work__img">
                         <img src="assets/img/m1.jpg" alt="">
+                    </div>
+                    <div class="work__img">
+                        <img src="assets/img/c2.jpg" alt="">
                     </div>
                 </div>
             </section>
